  * debian/sysdeps/arm64.mk: Enable IFUNC, now that binutils can support it.
  * debian/patches/locale/submitted-XDR-revert.diff: Return the XDR currency
    to locale/iso-4217.def because localedata/locales/i18n needs to have it.
  * debian/patches/powerpc/cvs-ibm-branch.diff: Pull in IBM's 2.19 backports
    to fix several bugs and add optimisations on POWER7 and POWER8 machines.

  [ Aurelien Jarno ]
  * debian/debhelper.in/libc.preinst: remove check for sparc32 kernel, the
    support has been removed with Lenny.
  * debian/debhelper.in/libc.preinst: remove code to upgrade armhf systems
    from pre-Wheezy versions.
  * debian/debhelper.in/libc.preinst: don't act on the filesystem until it
    is sure that the libc is going to be upgraded.
  * debian/debhelper.in/libc.preinst: stop checking for /etc/init.d/glibc.sh
    on upgrade, we don't support lenny to jessie upgrades.
  * debhelper.in/libc-alt.preinst: drop, we don't support lenny to jessie
    upgrades.

  [ Samuel Thibault ]
  * Hurd fixes for new upstream
    - debian/patches/hurd-i386/libpthread_version.diff: Rebased.
    - debian/patches/hurd-i386/submitted-net.diff: Rebased.
    - debian/patches/hurd-i386/tg-elfosabi_gnu.diff: Fixed upstream.
    - debian/patches/hurd-i386/tg-pthread-atfork.diff: Fixed upstream.
    - debian/patches/hurd-i386/tg-tls-threadvar.diff: Rebased.
    - debian/patches/hurd-i386/tg-tls.diff: Rebased.
    - debian/patches/hurd-i386/unsubmitted-gnumach.defs.diff: Rebased.
    - update testsuite hurd-i386 results.

 -- Adam Conrad <adconrad@0c3.net>  Sun, 09 Feb 2014 09:46:13 -0700

eglibc (2.18-5) UNRELEASED; urgency=medium

  [ Samuel Thibault ]
  * patches/hurd-i386/tg-mmap_file_prot_none_fix.diff: New patch, fixes locale
    generation.
  * patches/hurd-i386/libpthread_nort.diff: Remove patch, replaced by...
  * patches/hurd-i386/cvs-libpthread-pthread_condattr_setclock.diff: Fix for
    pthread_condattr_setclock, for glib2.0 build.
