@@ -46,6 +46,8 @@ eglibc (2.19-0experimental0) UNRELEASED; urgency=medium
     to locale/iso-4217.def because localedata/locales/i18n needs to have it.
   * debian/patches/powerpc/cvs-ibm-branch.diff: Pull in IBM's 2.19 backports
     to fix several bugs and add optimisations on POWER7 and POWER8 machines.
+  * debian/patches/any/local-no-malloc-backtrace.diff: Change M_CHECK_ACTION
+    to abort if the first bit is set (ie: MALLOC_CHECK_=1), like the second.
 
   [ Aurelien Jarno ]
   * debian/debhelper.in/libc.preinst: remove check for sparc32 kernel, the
